--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.6.2",
     "react": "^15.4.2",
     "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "style-loader": "^0.13.1",
