--- a/websoket/package.json
+++ b/websoket/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "websoket",
+  "name": "websoket-joguin",
   "version": "1.0.0",
-  "description": "",
+  "description": "dasdasdasdasdasdasdasdsasdasdasdasldkjasdjk",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
+  }
 }
