--- a/jogo/package.json
+++ b/jogo/package.json
@@ -31,5 +31,8 @@
     "style-loader": "*",
     "webpack": "*",
     "webpack-dev-server": "*"
+  },
+  "dependencies": {
+    "socket.io-client": "^2.1.1"
   }
 }
