--- a/jogo/package.json
+++ b/jogo/package.json
@@ -20,7 +20,7 @@
     "bootstrap": "*",
     "css-loader": "*",
     "extract-text-webpack-plugin": "*",
-    "file-loader": "*",
+    "file-loader": "^2.0.0",
     "font-awesome": "*",
     "prop-types": "*",
     "react": "*",
@@ -33,6 +33,11 @@
     "webpack-dev-server": "*"
   },
   "dependencies": {
-    "socket.io-client": "^2.1.1"
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.6.0",
+    "socket.io-client": "^2.1.1",
+    "thunk": "0.0.1"
   }
 }
