--- a/jogo/package.json
+++ b/jogo/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "react-redux": "^5.1.1",
+    "react-sound": "^1.2.0",
     "redux": "^4.0.1",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
